# kiwi

./: .gitignore  BUILD.bazel  README.md  browser.min.js  circle.yml  js.d.ts  js.js  js.ts  kiwi.h  kiwi.sk  kiwic.bzl  package-lock.json  package.json
js/: .gitignore  bb.ts  binary.ts  browser.ts  cli.ts  cpp-callback.ts  cpp.ts  hasher.ts  hashtable.ts  js.ts  kiwi.ts  kiwic  package-lock.json  package.json  parser.ts  printer.ts  skew-types.ts  skew.ts  ts.ts  tsconfig.json
rust/: BUILD.bazel  maintainers.yml
rust/src/: lib.rs
test/: .clang-format  BUILD.bazel  kiwi.cpp  kiwi.h  test-callback.cpp  test-schema-dedup.kiwi  test-schema-sparse.kiwi  test-schema.kiwi  test.cpp  test.js  test.sk
