load("@rules_rust//rust:defs.bzl", "rust_library")
load("@crate_index//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "kiwi-schema",
    srcs = glob(["src/*.rs"]),
    crate_name = "kiwi_schema",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ),
)

exports_files(["Cargo.toml"])
